--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="assets/e-werknemer-v2.29.2/icons/icons.data.svg.css">
+  <link rel="stylesheet" type="text/css" href="assets/e-werknemer-v2.29.2/css/main.css">
 </head>
 <body>
   <kia-app></kia-app>
